tests/fixtures/nupm/rejected/script-type/spam_script.nu
export def main [] { "script package entry" }
